# JARVIS

./: .env.example  .gitignore  .spotify_cache  README.md  add_shortcuts.py  auditoria_total.txt  auth_tasks.py  check3.py  check4.py  demo_memory.py  demo_windows_tools.py  jarvis-api-sidecar-x86_64-pc-windows-msvc.spec  jarvis_auditoria.txt  jarvis_test.db  main.py  main_backup_clean_2026m08230658.py  patch2.py  patch3.py  patch4.py  patch5.py  requirements.txt  revision_main.txt  test_groq.py  test_ha.py  test_ha_tools.py  test_keep.py
api/: app.py
core/: config.py  container.py  interfaces.py
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: build-sidecar.ps1  jarvis-api-sidecar.py
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/adr/: ADR-001-llm.md  ADR-002-db.md  ADR-003-eventbus.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
infrastructure/: event_bus.py  events.py  logger.py  reminder_scheduler.py
llm/: __init__.py  cerebras_provider.py  deepseek_provider.py  gemini_provider.py  groq_provider.py
memory/: __init__.py  memory_manager.py  ram_memory.py  sqlite_memory.py
raíz/: CONTRIBUTING.md  estructura.txt
services/: __init__.py  assistant_runtime.py
tests/: test_event_bus.py  test_tool_registry.py
tools/: __init__.py  registry.py
voice/: __init__.py  stt.py  tts.py  voice_manager.py
(+14 files in other folders)
